[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/player/default_cube.glb" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/player.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/bot/bot_texture.png" type="Texture" id=3]
[ext_resource path="res://sounds/death.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/footsteps.mp3" type="AudioStream" id=5]
[ext_resource path="res://sounds/jump.mp3" type="AudioStream" id=6]
[ext_resource path="res://scenes/player/bot/bot.gltf" type="PackedScene" id=7]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 3 )

[sub_resource type="CapsuleShape" id=2]
radius = 1.14683
height = 7.51593

[sub_resource type="CapsuleShape" id=3]

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 2 )

[node name="CharPivot" type="Spatial" parent="."]

[node name="Cube" parent="CharPivot" instance=ExtResource( 1 )]
visible = false

[node name="Bot" parent="CharPivot" instance=ExtResource( 7 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -1, 0 )

[node name="robo guy" parent="CharPivot/Bot/rig/Skeleton" index="0"]
material/0 = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3.82371, 0 )
shape = SubResource( 2 )

[node name="CamPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CamPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30 )
current = true

[node name="JumpArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="JumpArea"]
shape = SubResource( 3 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[editable path="CharPivot/Bot"]
